# praxis

./: CLAUDE.md  Cargo.toml  README.md
crates/praxis-core/: Cargo.toml
crates/praxis-core/src/: error.rs  fs_port.rs  local_fs.rs
crates/praxis-mcp/: Cargo.toml
crates/praxis-mcp/src/: connection.rs  lib.rs
crates/praxis-skills/src/: parser.rs  registry.rs
crates/praxis-tools/: Cargo.toml
crates/praxis-tools/src/: lib.rs  memory.rs
life-praxis/: Cargo.toml
life-praxis/src/: lib.rs
praxis-core/src/: lib.rs  sandbox.rs  workspace.rs
praxis-mcp-bridge/: Cargo.toml
praxis-mcp-bridge/src/: convert.rs  lib.rs  server.rs  tool.rs  transport.rs
praxis-mcp-bridge/tests/: integration.rs
praxis-skills/: Cargo.toml
praxis-skills/src/: lib.rs  parser.rs  registry.rs
praxis-tools/: CHANGELOG.md  Cargo.toml
praxis-tools/src/: edit.rs  fs.rs  lib.rs  memory.rs  remote.rs  shell.rs
