[package]
name = "life-praxis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool execution engine facade for the Life Agent OS — re-exports praxis-core, praxis-tools, praxis-skills, and praxis-mcp-bridge"

[dependencies]
praxis-core = { path = "../praxis-core", version = "0.3.0" }
praxis-tools = { path = "../praxis-tools", version = "0.3.0" }
praxis-skills = { path = "../praxis-skills", version = "0.3.0" }
praxis-mcp-bridge = { path = "../praxis-mcp-bridge", version = "0.3.0" }

[lints]
workspace = true
