[package]
name = "praxis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core sandbox policy, workspace enforcement, and command runner for the Praxis tool engine"

[dependencies]
aios-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
